feat: Remove blackbox tools and simplify detection logic
- Remove bundled blackbox_decode, blackbox_render, Blackbox_decode.exe files
- Add clear instructions to download from GitHub releases
- Simplify blackbox_decode detection: Windows=Blackbox_decode.exe, others=blackbox_decode
- Update .gitignore to exclude blackbox tools
- Improve troubleshooting documentation

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ LOG*temp*
 
 # Temporary files
 tmp/
+
+# Blackbox tools (download from https://github.com/cleanflight/blackbox-tools)
+blackbox_decode*
+Blackbox_decode*
+blackbox_render*
